Fixed footer on iphone

--- a/less/main.less
+++ b/less/main.less
@@ -373,6 +373,11 @@ footer {
         padding-top: 12px;
         padding-bottom: 12px;
     }
+
+    #footer-social-media-icons a {
+        height: 15px;
+        width: 15px;
+    }
 }
 
 @media (max-width: 690px){
@@ -437,7 +442,7 @@ footer {
 }
 
 @media (min-width: 960px){
-  .navbar{
+  .navbar {
     padding-left: 10%;
     padding-right: 10%;
    }
@@ -503,6 +508,12 @@ footer {
 /*--------- DESKTOP ---------*/
 
 @media (min-width: 1200px) {
+  #contact-form {
+    width: 1000px;
+    margin: 50px auto;
+    padding: 75px;
+  }
+
   #landing-background {
     background-image: url('../resources/images/light-background.png');
     background-size: cover;
